Bug 381124 - Renaming files on desktop triggers Krunner
Summary: Renaming files on desktop triggers Krunner
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-12 11:19 UTC by Tony
Modified: 2017-06-12 14:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2017-06-12 11:19:52 UTC
While i was trying to reproduce this bug 380897,i noticed F2 key does not exist/works in "Folder View" layout.

Doing right click > rename on any file/folder does, but as soon as you start typing anything krunner will trigger taking the focus from the renaming process.

I get this one on opensuse tumbleweed using this repos:
https://en.opensuse.org/KDE_repositories#Unstable_Frameworks.2C_Plasma_and_Applications

Related? bug 380284
Comment 1 David Edmundson 2017-06-12 14:22:49 UTC
Git commit b0e8ea29fab410ac10f1e73d8ee3de5b2900139f by David Edmundson.
Committed on 12/06/2017 at 14:22.
Pushed by davidedmundson into branch 'master'.

Set Containments to have focus within the view

Summary:
Now that applets are their own focus scope (which makes sense) we've
also made containments their own focus scope.

We therefore need to also say the containment FocusScope has the focus
within the view.

Test Plan:
Renamed something in folderview
Used cursor nav

Reviewers: #plasma

Subscribers: plasma-devel, #frameworks

Tags: #plasma, #frameworks

Differential Revision: https://phabricator.kde.org/D6192

M  +1    -0    src/plasmaquick/containmentview.cpp

https://commits.kde.org/plasma-framework/b0e8ea29fab410ac10f1e73d8ee3de5b2900139f